Issue #379: Clean up code
- Clean up
- Some upgrading to AssertJ
- Sort modifiers
- Auto-format